--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,3 +1,9 @@
+{% comment %} <HEAD></HEAD> {% endcomment %}
+{% render 'partials/head.liquid', title: 'Squad page' %}
+{% comment %} <header></header> {% endcomment %}
+{% render 'partials/header.liquid' %}
+
+
 <h1>Zet 'm op team {{ teamName }}!</h1>
 
 <h2>Huidige berichten</h2>
@@ -20,5 +26,7 @@
   </label>
   <button type="submit">Verstuur</button>
 </form>
-
-halloo
+{% for person in persons %}
+  <img src="{{person.avatar}}" alt="">
+  <li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
+{% endfor %}
