--- a/views/partials/head_detail.liquid
+++ b/views/partials/head_detail.liquid
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <script src="/scripts/script.js" defer></script>
-    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="styles/detail.css">
     <title>{{ title }}</title>
   </head>
-  <body class="home">  
+  <body class="student_setail">  
     <h1>{{ title }}</h1>
