--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,32 +1,9 @@
-{% comment %} <HEAD></HEAD> {% endcomment %}
-{% render 'partials/head.liquid', title: 'Squad page' %}
-{% comment %} <header></header> {% endcomment %}
+
+{% render 'partials/head.liquid', title: 'Squadpage 1G' %}
+
 {% render 'partials/header.liquid' %}
 
+{% render 'partials/vector-images-filter.liquid' %}
 
-<h1>Zet 'm op team {{ teamName }}!</h1>
+{% render 'partials/student-mugshots.liquid', persons: persons %}
 
-<h2>Huidige berichten</h2>
-
-{% for message in messages %}
-<p>{{ message.from }}: {{ message.text }} @{{ message.created | date: '%d-%m-%Y %H:%M' }}</p>
-{% else %}
-<p>Test?</p>
-{% endfor %}
-
-<h2>Voeg een bericht toe</h2>
-<form method="post" action="/">
-  <label>
-    Naam:
-    <input type="text" name="from" required>
-  </label>
-  <label>
-    Bericht:
-    <textarea name="text" required></textarea>
-  </label>
-  <button type="submit">Verstuur</button>
-</form>
-{% for person in persons %}
-  <img src="{{person.avatar}}" alt="">
-  <li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
-{% endfor %}
