--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,5 @@
 @import url("./globals.css"); /* Main styling */
-@import url("./header.css");  /* Header */
+@import url("./header.css"); /* Header */
 @import url("./loop.css"); /* Person loop */
+@import url("./style.css");
+@import url("./homepage.css");
