#25 Links to filter pages added. Vecotr now respond to the link instead of js code

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -61,7 +61,7 @@ a {
     /* Minimalize a */
     text-decoration: none;
     font-size: inherit !important;
-    color: var(--color-black);
+    color: var(--color-white);
 }
 /* Text classes */
 .text-xl{
