--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -1,6 +1,6 @@
 
 <div class="site-header">
 <header>
-    <a><img src="assets/fdnd-logo.svg" class="fdnd-logo"></a>
+    <a><img src="/assets/fdnd-logo.svg" class="fdnd-logo"></a>
 </header>
 </div>
