--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -1,8 +1,10 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <script src="/scripts/script.js" defer></script>
-    <title>{{ title }}</title>
-  </head>
+<!DOCTYPE html>
+<html lang="nl">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="stylesheet" href="/styles/styles.css">
+      <script src="/scripts/script.js" defer></script>
+      <title>{{ title }}</title>
+    </head>
