--- a/views/student.liquid
+++ b/views/student.liquid
@@ -1,5 +1,5 @@
 {% comment %} <HEAD></HEAD> {% endcomment %}
-{% render 'partials/head_detail.liquid', title: 'Squad page' %}
+{% render 'partials/head.liquid', title: 'Squad page' %}
 {% comment %} <header></header> {% endcomment %}
 {% render 'partials/header.liquid' %}
 
