--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -36,7 +36,7 @@ button {
   justify-content: center;
   gap: 5rem;
   min-height: 100vh;
-  padding: 5rem 20rem;
+  padding: 5rem;
 }
 
 .mugshot-student {
