#26 mobile first gemaakt van filtersysteem

--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -58,8 +58,51 @@ button {
 .filter-wrapper {
   display: flex;
   justify-content: center;
-  padding-top: 15rem;
-  gap: 12rem;
+  padding: 7.5rem 24px 0;
+  gap: 20px;
+  
+  row-gap: 20px;
+  flex-wrap: wrap;
+  .vector-wrapper:nth-of-type(2){
+    order: 3;
+  }
+  .vector-wrapper{
+    width: 100%;
+    h1{
+      margin-bottom: 1.5rem;
+    }
+    .image-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img{
+        width: 6rem;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+
+  @media (min-width: 600px){
+    padding: 15rem 24px 0;
+    gap: 12rem;
+    row-gap: 20px;
+    .vector-wrapper:nth-of-type(2){
+      order: 2;
+    }
+    .vector-wrapper{
+      width: initial;
+      h1{
+        margin-bottom: 3rem;
+      }
+      .image-container{
+        img{
+          width: 10rem;
+          margin-bottom: 5rem;
+        }
+      }
+    }
+  }
 }
 
 .vector-wrapper {
