#24 http request aangepast

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,5 +5,6 @@
 @import url("./loop.css"); /* Person loop */
 @import url("./style.css");
 @import url("./homepage.css");
+@import url("./detail.css");
 
 
