--- a/views/index.liquid
+++ b/views/index.liquid
@@ -3,7 +3,7 @@
 
 {% render 'partials/header.liquid' %}
 
-{% render 'partials/vector-images-filter.liquid'  most_energy: most_energy %}
+{% render 'partials/vector-images-filter.liquid' filtered: filtered, most_energy: most_energy %}
 
 {% render 'partials/student-mugshots.liquid', persons: persons %}
 
