--- a/views/student.liquid
+++ b/views/student.liquid
@@ -4,6 +4,23 @@
 {% render 'partials/header.liquid' %}
 
 <a href="/">Back</a>
-<pre>{{ person | json | replace: ',', ',\n' | replace: '{', '{\n' | replace: '[', '[\n' }}</pre>
-<img src="{{person.avatar}}" alt="">
-<li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
+
+<main>
+    <pre>{{ person | json | replace: ',', ',\n' | replace: '{', '{\n' | replace: '[', '[\n' }}</pre>
+    <img src="{{person.avatar}}" alt="">
+    <li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
+    
+    <form method="post" action="/berichten">
+        <label>
+            <input type="text" name="texten" required>
+        </label>
+        
+        <button type="submit">Submit</button>
+    </form>
+
+    <div>
+        {% for message in messages %} 
+            <p>{{ message }}</p>
+        {% endfor %}
+    </div>
+ </main>
