--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -1,14 +1,14 @@
 main {
     display: grid;
-    height: 90vh; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @media (min-width: 400px){
-        grid-template-columns: 1fr 1fr;
-        place-items: center;
-        column-gap: 5em;
-    }
+        @media (min-width: 400px){
+            grid-template-columns: 1fr 1fr;
+            place-items: center;
+            column-gap: 5em;
+            height: 90vh; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 }
 
 .avatar {
@@ -29,10 +29,10 @@ li {
     padding-top: 2em;
     list-style: none;
     padding-left: 1em;
-    @media (min-width: 400px){
-        grid-column: 2/3;
-        margin-bottom: 1em;
-    }
+        @media (min-width: 400px){
+            grid-column: 2/3;
+            margin-bottom: 1em;
+        }
 
     a {
     color: var(--color-white);
@@ -49,27 +49,40 @@ pre {
     margin-left: 1em;
     white-space: pre-wrap; 
     max-width: 350px;
-    @media (min-width: 400px){
-        grid-column: 2/3;
-    }
+        @media (min-width: 400px){
+            grid-column: 2/3;
+        }
 }
 
 form {
-    @media (min-width: 400px){
-        grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+        @media (min-width: 400px){
+            grid-column: 2/3;
+        }
+
+    input {
+        height: 4em;
+        width: 20em;
+        border-radius: 0.2rem;
+        box-shadow: 0 0 10px rgba(0, 80, 130, 0.2);
+        background-color: #000b11;
+        border: #000b11;
+        margin-top: 2em;
+        [type="text"] {
+            color: var(--color-white);
+        }
+    }
+
+    .submit-quote {
+        padding-top: 2em;
+        color: var(--color-white);
+        width: 20em;
     }
 }
 
-input {
-    height: 4em;
-    width: 20em;
-    border-radius: 0.2rem;
-    box-shadow: 0 0 10px rgba(0, 80, 130, 0.2);
-    background-color: #000b11;
-    border: #000b11;
-    margin-top: 2em;
-}
 
-p {
-    color: var(--color-white);
-}
+
+
+
+
