--- a/views/student.liquid
+++ b/views/student.liquid
@@ -18,7 +18,7 @@
                     <input type="text" name="texten" required>
                 </label>
                 
-                <button type="submit">Submit</button>
+                <button class="submit-quote" type="submit">Submit</button>
             </form>
 
             <div>
