#24 box shadow inputveld aangepast voor betere zichtbaarheid

--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -100,7 +100,7 @@ form {
         height: 4em;
         width: 20em;
         border-radius: 0.2rem;
-        box-shadow: 0 0 10px rgba(0, 80, 130, 0.2);
+        box-shadow: 0 0 10px #C593FF;
         background-color: #000b11;
         border: #000b11;
         margin-top: 2em;
