--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -125,3 +125,18 @@ input[type="text"] {
 
 
 
+
+
+main{
+    MIN-HEIGHT: 100VH;
+}
+.detail-wrapper{
+    display: flex;
+    padding: 40px 20px;
+    margin-bottom: 50px;
+    border: 5px solid var(--color-primary);
+    margin-top: -45px;
+    z-index: -1;
+    background: var(--color-primary);
+    opacity: 0.8;
+}
