--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -1,1 +1,3 @@
 </html>
+<footer>Gemaakt door team Epic:Halima, Dylan, Karima</footer>
+<div class="second-footer">@copyright 2025 Squadpage FDND 1G</div>
