--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -1,142 +1,140 @@
 main {
-    display: grid;
-        @media (min-width: 400px){
-            grid-template-columns: 1fr 1fr;
-            place-items: center;
-            column-gap: 5em;
-            height: 80vh; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+  display: grid;
+  @media (min-width: 400px) {
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    column-gap: 5em;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .back-home {
-    padding: .5em;
-    margin-left: 1em;
-    color: var(--color-black);
-    width: 10em;
-    background-color: #C593FF;
-    border-radius: 0.2rem;
-    font-size: 13.3px;
+  padding: 0.5em;
+  margin-left: 1em;
+  color: var(--color-black);
+  width: 10em;
+  background-color: #c593ff;
+  border-radius: 0.2rem;
+  font-size: 13.3px;
 }
 
-.container-avatar-quote{
-    display: grid;
-    flex-direction: column;
-    justify-content: center;
-    gap: 30px;
+.container-avatar-quote {
+  display: grid;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
 }
-blockquote{
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 600;
-    hyphens: auto;
-    max-width: 300px;
-    word-break: break-word;
+blockquote {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  hyphens: auto;
+  max-width: 300px;
+  word-break: break-word;
 }
 
 .avatar {
-    max-width: 25rem;
-    height: 25rem;
-    border-radius: 0.2rem;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    box-shadow: 0 0 10px rgba(0, 80, 130, 0.2);
-    margin-top: 3em;
-        @media (min-width: 400px){
-        grid-column: 1/2;
-        margin-left: auto;
-        margin-right: auto;
-          
-    }
+  max-width: 25rem;
+  height: 25rem;
+  border-radius: 0.2rem;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  box-shadow: 0 0 10px rgba(0, 80, 130, 0.2);
+  margin-top: 3em;
+  @media (min-width: 400px) {
+    grid-column: 1/2;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-
 li {
-    padding-top: 2em;
-    list-style: none;
-    padding-left: 1em;
+  padding-top: 2em;
+  list-style: none;
+  padding-left: 1em;
+  margin-bottom: 1em;
+  @media (min-width: 400px) {
+    grid-column: 2/3;
     margin-bottom: 1em;
-        @media (min-width: 400px){
-            grid-column: 2/3;
-            margin-bottom: 1em;
-        }
+  }
 
-    a {
+  a {
     color: var(--color-white);
-    font-weight: bold; 
+    font-weight: bold;
     font-size: var(--font-size-l);
-        @media (min-width: 400px){
-            font-size: var(--font-size-xl);
-        }
+    @media (min-width: 400px) {
+      font-size: var(--font-size-xl);
     }
+  }
 }
 
 hr {
-    max-width: 19em;
-    margin-left: 1em;
+  max-width: 19em;
+  margin-left: 1em;
 }
 
 pre {
-    margin-left: 1em;
-    white-space: pre-wrap; 
-    max-width: 350px;
-        @media (min-width: 400px){
-            grid-column: 2/3;
-        }
-    
+  margin-left: 1em;
+  white-space: pre-wrap;
+  max-width: 350px;
+  @media (min-width: 400px) {
+    grid-column: 2/3;
+  }
 }
 
-
 form {
-    display: flex;
-    flex-direction: column;
-    margin-left: 1em;
-        @media (min-width: 400px){
-            grid-column: 2/3;
-        }
+  display: flex;
+  flex-direction: column;
+  margin-left: 1em;
+  @media (min-width: 400px) {
+    grid-column: 2/3;
+  }
 
-    input {
-        height: 4em;
-        width: 20em;
-        border-radius: 0.2rem;
-        box-shadow: 0 0 10px #C593FF;
-        background-color: #000b11;
-        border: #000b11;
-        margin-top: 2em;
-        
-    }
+  input {
+    height: 4em;
+    width: 20em;
+    border-radius: 0.2rem;
+    background-color: #89e2c15b;
+    border: none;
+    margin-top: 2em;
+    padding: 1rem;
+    font-size: 1.1rem;
+    border: #89e2c1;
+  }
 
-    .submit-quote {
-        margin-top: 2em;
-        padding: 1em;
-        color: var(--color-black);
-        width: 10em;
-        background-color: #C593FF;
-        border-radius: 0.2rem;
+  .submit-quote {
+    margin-top: 2em;
+    padding: 1em;
+    color: white;
+    font-weight: bold;
+    width: 10em;
+    background-color: #c593ff;
+    border-radius: 0.2rem;
+    &:hover {
+      background-color: #8959bf;
+      transform: scale(1.1);
     }
+  }
 }
 
 input[type="text"] {
-    color: white;
+  color: white;
 }
 
-
-
-
-
-
-
-main{
-    MIN-HEIGHT: 100VH;
+main {
+  min-height: 100vh;
 }
-.detail-wrapper{
-    display: flex;
-    padding: 40px 20px;
-    margin-bottom: 50px;
-    border: 5px solid var(--color-primary);
-    margin-top: -45px;
-    z-index: -1;
-    background: var(--color-primary);
-    opacity: 0.8;
+.detail-wrapper {
+  display: flex;
+
+  padding: 60px 100px;
+  margin-bottom: 50px;
+  border: 5px solid var(--color-primary);
+  border-radius: 1rem;
+  margin-top: -45px;
+
+  background: #89e2c15b;
+  opacity: 0.8;
 }
